feat: module 의존성 구성